# DeepFilterNet3-VST3

./: .gitignore  Build memo. Mac security issue.md  Cargo.toml  LICENSE  README.md  README_ja.md  ビルドメモ.md
plugin/: Cargo.toml
plugin/src/: lib.rs
